# memorybridge

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  LICENSE  MEMORYBRIDGE_ONE_PAGER.md  README.md  SECURITY.md  SETUP_GUIDE.md  claude_desktop_config_snippet.json  cli.py  client-memory-notion-template.md  client-memory-one-stop-shop.md  config.py  exports.py  extraction_prompt.md  manifest.json  memory-health-report-2026-05-18.md  memorybridge.example.yaml  memorybridge.plugin  memorybridge_perplexity.dxt  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  tweet_2051591553701835137.json  ziCd0OCz
.github/workflows/: ci.yml
.omc/sessions/: d060095d-a5a2-49a4-b87b-cea42d1a317f.json
.omc/state/: last-tool-error.json
.streamlit/: config.toml
db/: constants.py  entities.py  migrate.py  pruner.py  reflect.py  schema.sql  store.py
docs/: DEPLOY.md
docs/plans/: 2026-05-05-memorybridge-roadmap.md  2026-05-09-backlog-completion.md  2026-05-10-notion-context-public.md  2026-05-10-notion-flagged-queue.md  2026-07-01-okf-export-cross-llm-memory.md
ingestion/: extractor.py  merger.py  notion_context.py  notion_queue.py  parse_chatgpt.py  parse_claude.py  parse_gemini.py  parse_hermes.py  passport.py  profile_router.py  resolver.py  router.py  run.py  watcher.py
launchd/: com.memorybridge.inbox.plist  com.memorybridge.inbox.plist.template  com.memorybridge.notion-context.plist  com.memorybridge.notion-context.plist.template  install.sh
scripts/: backfill-entities.py  backfill-tags.py  export-okf.py  log_groomer.sh
tests/integration/: test_mcp_tools.py
tests/ui/: test_flagged_queue.py
tests/unit/: test_cli.py  test_concurrency.py  test_config.py  test_core_lows.py  test_coverage_gaps.py  test_db.py  test_db_maintenance.py  (+19 more)
ui/: app.py
(+8 files in other folders)
